<resources>
    <string name="action_create">Create new collection</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="info_info">Screenshot info</string>
    <string name="title_noshots">No screenshots yet!</string>
    <string name="action_later">Later</string>
    <string name="notification_action_capture">Tap to take screenshot</string>
    <string name="notification_action_open">Open app</string>
    <string name="notification_action_stop">Stop</string>
    <string name="notification_action_collect_title">New screenshots captured</string>
    <string name="notification_action_collect">Tap to sort your screenshots</string>
    <string name="multisorting_action_next">Next</string>
    <string name="sorting_title_move">Move to</string>
    <string name="sorting_suggestion_1st">Shopping</string>
    <string name="sorting_suggestion_2nd">Finance &amp; Banking</string>
    <string name="sorting_suggestion_3rd">News &amp; Article</string>
    <string name="sorting_suggestion_4th">Chat history</string>
    <string name="sorting_suggestion_5th">Event &amp; Activity</string>
    <string name="dialogue_title_collection">Collection name</string>
    <string name="dialogue_inputfield_hint">Give me a name</string>
    <string name="dialogue_action_add">Add</string>
    <string name="home_action_search">Search</string>
    <string name="menu_home_action_settings">Settings</string>
    <string name="home_separator_access">Quick access</string>
    <string name="home_action_more">View all</string>
    <string name="home_separator_collection">Collections</string>
    <string name="home_action_unsorted">Unsorted</string>
    <string name="collection_separator_shots">%1$d shots</string>
    <string name="collection_header_select_all">All selected</string>
    <string name="collection_header_select_none">Select screenshots</string>
    <string name="collection_header_viewall_all">All screenshots</string>
    <string name="detail_ocr_error_failed">Text recognition failed</string>
    <string name="detail_ocr_error_edgecase">Something went wrong? Crop the screenshot and retry.</string>
    <string name="detail_ocr_error_notext">No text found</string>
    <string name="detail_ocr_error_module">Connect to the internet to install offline Text Recognition module</string>
    <string name="detail_ocr_error_action_connect">Connect</string>
    <string name="detail_ocr_instruction">Tap text for more options</string>
    <string name="detail_ocr_action_selectall">Select all text</string>
    <string name="detail_transition_recognizing">Recognizing text&#8230;</string>
    <string name="dialogue_collecitioninfo_title_info">Collection info</string>
    <string name="dialogue_list_name">Name</string>
    <string name="dialogue_collecitioninfo_list_shot">Total screenshots</string>
    <string name="dialogue_collecitioninfo_list_storage">Storage used</string>
    <string name="dialogue_shotinfo_list_size">Size</string>
    <string name="dialogue_list_edit">Last edit</string>
    <string name="dialogue_deletecollection_title_delete">Delete collection?</string>
    <string name="dialogue_deleteshot_title_delete">Delete screenshot?</string>
    <string name="dialogue_delete_content_cantundo">Are you sure? Deleting this collection will permanently remove all of its screenshots from your phone.</string>
    <string name="dialogue_deleteshot_content_delete">Are you sure? Deleting screenshots will permanently remove screenshots from your phone.</string>
    <string name="dialogue_deletecollection_content_shots">%1$d screenshots</string>
    <string name="dialogue_rename_title_rename">Rename collection</string>
    <string name="dialogue_rename_error_duplicate">There is already a collection with this name</string>
    <string name="dialogue_rename_error_maximum">20 characters maximum</string>
    <string name="dialogue_skipsorting_title_skip">Skip the rest?</string>
    <string name="dialogue_skipsorting_content_moveto">Skip remaining screenshots and move to “Unsorted?”</string>
    <string name="dialogue_skipsorting_content_count">%1$d remaining</string>
    <string name="dialogue_skipsorting_action_skip">Skip all</string>
    <string name="dialogue_stopasking_title_stop">Stop asking to sort?</string>
    <string name="dialogue_stopasking_content_stop">%1$s button will save all your screenshots to the Unsorted collection. This can be configured in Settings.</string>
    <string name="dialogue_stopasking_action_alwaysask">Always ask</string>
    <string name="menu_action_select">Select</string>
    <string name="menu_shot_action_move">Move to&#8230;</string>
    <string name="menu_action_rename">Rename</string>
    <string name="menu_ocr_action_web">Web search</string>
    <string name="menu_ocr_action_copy">Copy</string>
    <string name="menu_action_selectall">Select all</string>
    <string name="sheet_enable_title_enable">Enable %1$s to take screenshots?</string>
    <string name="sheet_enable_content_enable">You won’t be able to take screenshots with one tap unless this is enabled.</string>
    <string name="sheet_enable_action_enable">Enable</string>
    <string name="sheet_unsorted_title_unsorted">Unsorted screenshots</string>
    <string name="sheet_unsorted_content_shots">%1$d unsorted screenshots. Sort them now?</string>
    <string name="sheet_box_ask">Don’t ask again</string>
    <string name="sheet_unsorted_action_sort">Sort</string>
    <string name="sheet_action_no">No thanks</string>
    <string name="sheet_saveordelete_content_screenshot">This screenshot can be saved or deleted.</string>
    <string name="sheet_saveordelete_action_save">Save</string>
    <string name="snackbar_disable">Screenshot feature disabled</string>
    <string name="snackbar_enable">Screenshot feature enabled</string>
    <string name="snackbar_addto">Added to %1$s</string>
    <string name="snackbar_copied">Copied</string>
    <string name="settings_list_capture">Enable screenshot feature</string>
    <string name="settings_detail_capture">Allows you to take a screenshot with one tap. Works with whatever is on your screen.</string>
    <string name="settings_list_fab">Use %1$s button</string>
    <string name="settings_list_sorting">Ask to sort</string>
    <string name="settings_detail_sorting">After you take a screenshot, always ask you which collection to put it in.</string>
    <string name="settings_list_usagedata">Send usage data</string>
    <string name="settings_detail_mozilla">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>
    <string name="settings_action_learnmore">Learn more</string>
    <string name="settings_list_feedback">Give feedback</string>
    <string name="feedback_title_lovefeedback">We love feedback!</string>
    <string name="feedback_detail_letusknow">Let us know what you think.</string>
    <string name="feedback_action_rate">Yes, rate 5 stars!</string>
    <string name="feedback_action_feedback">No, send feedback.</string>
    <string name="settings_list_share">Share with friends</string>
    <string name="share_intro">Hey, check out this new app that helps you organize and find your screenshots easily. It’s called %1$s. %2$s</string>
    <string name="settings_list_about">About</string>
    <string name="about_title_name" translatable="false">@string/app_full_name</string>
    <string name="about_content_version">Version %1$s</string>
    <string name="about_list_support">Support</string>
    <string name="about_list_right">Your Rights</string>
    <string name="about_list_privacy">Privacy Notice</string>
    <string name="onboarding_storage_title_welcome">Welcome to %1$s</string>
    <string name="onboarding_storage_content_permission">To help you organize and find your screenshots better, we’ll need your permission to access phone storage.</string>
    <string name="onboarding_storage_caption_duplicates">*Don’t worry, this won’t duplicate files.</string>
    <string name="onboarding_storage_content_autogrant">%1$s helps you organize and find your screenshots better.</string>
    <string name="onboarding_storage_action_confirm" translatable="false">Let’s GO</string>
    <string name="onboarding_transition_loading">Loading</string>
    <string name="onboarding_fab_title_fab">Get the %1$s button</string>
    <string name="onboarding_fab_content_permission">The %1$s button lets you take and organize your screenshots anytime, anywhere. We’ll need your permission to enable it.</string>
    <string name="onboarding_autogrant_overlay_title">Use the %1$s button to take and organize screenshots anytime, anywhere.</string>
    <string name="onboarding_autogrant_overlay_gotit">Got it</string>
    <string name="onboarding_error_title_wrong">Oops! Something’s wrong</string>
    <string name="onboarding_error_content_permission">%1$s needs this permission to work correctly.</string>
    <string name="onboarding_error_action_allow">Allow permission</string>
    <string name="onboarding_rareerror_content_permission">%1$s needs permission to access your phone’s storage. Please find Permission to turn on Storage.</string>
    <string name="onboarding_rareerror_action_goto">Go to permission</string>
    <string name="onboarding_search_title_soon">Search is coming soon!</string>
    <string name="onboarding_search_content_survey">We’re working on a magic feature to help you search screenshots with text. Interested?</string>
    <string name="onboarding_search_action_agree">Yes please</string>
    <string name="onboarding_search_action_disagree">Nope</string>
    <string name="onboarding_search_content_feedback">Thanks for your feedback!</string>
    <string name="onboarding_ocr_title_more">Take Action on Text</string>
    <string name="onboarding_ocr_content_examples">Copy the text in your screenshot for web search, share or more.</string>
    <string name="onboarding_search_title_search">Finding screenshots is now easier</string>
    <string name="onboarding_search_content_typeword">Just type to search words within screenshots</string>
    <string name="onboarding_search_caption_battery">To make this happen, we’ll recognize your screenshot first. It may consume more battery, but it won’t take long!</string>
    <string name="dialogue_feedback_title">Love %1$s?</string>
    <string name="dialogue_share_title">Share %1$s with Friends!</string>
    <string name="dialogue_take_share_description">Enjoy taking screenshots? Share it now!</string>
    <string name="dialogue_sort_share_description">Enjoy organizing screenshots? Share it now!</string>
    <string name="dialogue_ocr_share_description">Find screenshot-to-text useful? Share it now!</string>
    <string name="search_transition_searching">Searching&#8230;</string>
    <string name="search_error_title_noresult">No results found</string>
    <string name="search_error_content_try">Try another word</string>
    <string name="search_separator_results">%1$d results</string>
    <string name="search_transition_progress">%1$d screenshots remaining&#8230;</string>
    <string name="search_transition_content_searchable">We’re making all screenshots searchable. You can soon type to search words within screenshots!</string>
</resources>