<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_give_feedback_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_padding_24dp"
        android:layout_marginTop="@dimen/common_padding_24dp"
        android:layout_marginRight="@dimen/common_padding_24dp"
        android:gravity="center"
        android:text="@string/feedback_title_lovefeedback"
        android:textAppearance="@style/H2"
        android:textColor="@color/grey90" />

    <TextView
        android:id="@+id/dialog_give_feedback_text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_padding_24dp"
        android:layout_marginTop="@dimen/common_padding_4dp"
        android:layout_marginRight="@dimen/common_padding_24dp"
        android:layout_marginBottom="@dimen/common_padding_16dp"
        android:gravity="center"
        android:text="@string/feedback_detail_letusknow"
        android:textAppearance="@style/Subtitle2"
        android:textColor="@color/grey50" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_centerHorizontal="true"
            android:src="@null" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/common_padding_16dp"
        android:background="@color/disableGrey" />

    <Button
        android:id="@+id/dialog_give_feedback_btn_go_rate"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_list_item_height"
        android:text="@string/feedback_action_rate"
        android:textAppearance="@style/ButtonText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/disableGrey" />

    <Button
        android:id="@+id/dialog_give_feedback_btn_feedback"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_list_item_height"
        android:text="@string/feedback_action_feedback"
        android:textAppearance="@style/ButtonText" />
</LinearLayout>
