<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="@dimen/common_padding_24dp"
    android:paddingEnd="@dimen/common_padding_24dp">

    <TextView
        android:id="@+id/collection_info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_12dp"
        android:text="@string/dialogue_list_name"
        android:textAppearance="@style/Subtitle1"
        android:textColor="@color/grey90" />

    <TextView
        android:id="@+id/collection_info_name_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_4dp"
        android:textAppearance="@style/Subtitle2"
        android:textColor="@color/grey50" />

    <TextView
        android:id="@+id/collection_info_total_screenshots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_12dp"
        android:text="@string/dialogue_collecitioninfo_list_shot"
        android:textAppearance="@style/Subtitle1"
        android:textColor="@color/grey90" />

    <TextView
        android:id="@+id/collection_info_total_screenshots_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_4dp"
        android:textAppearance="@style/Subtitle2"
        android:textColor="@color/grey50" />

    <TextView
        android:id="@+id/collection_info_storage_used"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_12dp"
        android:text="@string/dialogue_collecitioninfo_list_storage"
        android:textAppearance="@style/Subtitle1"
        android:textColor="@color/grey90" />

    <TextView
        android:id="@+id/collection_info_storage_used_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_4dp"
        android:textAppearance="@style/Subtitle2"
        android:textColor="@color/grey50" />

    <!-- Remove last edit time for now to fix #320
    <TextView-->
        <!--android:id="@+id/collection_info_last_edit"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/common_padding_12dp"-->
        <!--android:text="@string/dialogue_list_edit"-->
        <!--android:textAppearance="@style/Subtitle1"-->
        <!--android:textColor="@color/grey90" />-->

    <!--<TextView-->
        <!--android:id="@+id/collection_info_last_edit_time"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/common_padding_4dp"-->
        <!--android:textAppearance="@style/Subtitle2"-->
        <!--android:textColor="@color/grey50" />-->
</LinearLayout>
